--- a/index.html
+++ b/index.html
@@ -71,8 +71,8 @@ $(document).ready(function() {
 
 <p>
 <input type="button" value="cat"><br>
-<a href="google.com">Google</a><br>
-<a href="cmu.edu">CMU</a><br>
+<a href="www.google.com">Google</a><br>
+<a href="www.cmu.edu">CMU</a><br>
 
 
 </body>
