--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ $(document).ready(function() {
 
  	console.log(potentialcommand);
 
-    var re = /^(click|scroll|enter)\s(.*)/i;
+    /*var re = /^(click|scroll|enter)\s(.*)/i;
     var result = re.exec(potentialcommand);
 
  	if(result) {
@@ -58,7 +58,7 @@ $(document).ready(function() {
 	  	// scroll down
 	  //}
  	}
-
+*/
  })
 });
 </script>
