--- a/index.html
+++ b/index.html
@@ -95,4 +95,14 @@ Rooms oh fully taken by worse do. Points afraid but may end law lasted. Was out 
 </span>
 
 </body>
+<style>
+  .span {
+    padding: 2.5em;
+    margin: 4em;
+    left: 0;
+    top: 0;
+    font-size: 5em;
+
+  }
+</style>
 </html>
