--- a/index.html
+++ b/index.html
@@ -99,9 +99,9 @@ Rooms oh fully taken by worse do. Points afraid but may end law lasted. Was out 
   .span {
     padding: 2.5em;
     margin: 4em;
-    left: 0;
-    top: 0;
-    font-size: 5em;
+    left: 20em;
+    top: 20em;
+    font-size: 7em;
 
   }
 </style>
