--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@ Rooms oh fully taken by worse do. Points afraid but may end law lasted. Was out 
 
 </body>
 <style>
-  .span {
+  #span {
     padding: 2.5em;
     margin: 4em;
     left: 20em;
