--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@ $(document).ready(function() {
 <body>
 <p>
 <input type="button" value="click to use voice command"><br>
-<input type="text" id="command"><input type="button" value="Do something!" id="commandbutton">
+<input type="text" id="command"><input type="button" value="Do something!" id="commandbutton"><br>
 </p>
 
 <p>
