--- a/index.html
+++ b/index.html
@@ -76,8 +76,14 @@ $(document).ready(function() {
 <p>
 <input type="button" value="click to use voice command"><br>
 <input type="text" id="command"><input type="button" value="Do something!" id="commandbutton"><br>
+
+
 </p>
 
+<p>
+<input type="button" value="cat"><br>
+<a href="google.com">Google</a><br>
+<a href="cmu.edu">CMU</a><br>
 
 
 <span>
