--- a/index.html
+++ b/index.html
@@ -7,17 +7,23 @@
 <script>
 $(document).ready(function() {
 
-  if (!('webkitSpeechRecognition' in window)) {
-  upgrade();
-} else {
-  console.log("good to go")
-  }
+//   if (!('webkitSpeechRecognition' in window)) {
+//   upgrade();
+// } else {
+//   console.log("good to go")
+//   }
 
 
  $("#commandbutton").click(function() {
  	var potentialcommand = $("#command").val();
 
  	console.log(potentialcommand);
+
+  if (potentialcommanc == "scroll down"){
+    console.log("scroll");
+  } else {
+    alert("not a valid command");
+  }
 /*
     var re = /^(click|scroll|enter)\s(.*)/i;
     var result = re.exec(potentialcommand);
@@ -74,14 +80,13 @@ $(document).ready(function() {
 </head>
 <body>
 <p>
-<input type="button" value="click to use voice command"><br>
+<input type="button" value="click to use voice command" id="control"><br>
 <input type="text" id="command"><input type="button" value="Do something!" id="commandbutton"><br>
 
 
 </p>
 
 <p>
-<input type="button" value="cat"><br>
 <a href="google.com">Google</a><br>
 <a href="cmu.edu">CMU</a><br>
 
@@ -114,7 +119,10 @@ Expenses as material breeding insisted building to in. Continual so distrusts pr
     left: 20em;
     top: 20em;
     font-size: 2em;
+  }
 
+  .control{
+    font-size: 6em;
   }
 </style>
 </html>
