--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ $(document).ready(function() {
 
  	console.log(potentialcommand);
 
-  if (potentialcommanc == "scroll down"){
+  if (potentialcommand == "scroll down"){
     console.log("scroll");
   } else {
     alert("not a valid command");
