--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@ $(document).ready(function() {
 //   console.log("good to go")
 //   }
 
+$("#catbutton").click(function() {
+  })
 
  $("#commandbutton").click(function() {
  	var potentialcommand = $("#command").val();
@@ -21,7 +23,17 @@ $(document).ready(function() {
 
   if (potentialcommand == "scroll down"){
     console.log("scroll");
-  } else {
+  } else if (potentialcommand =="scroll up"){
+
+  } else if (potentialcommand =="click Google"){
+    $("html").load("www.google.com");
+    console.log("google");
+  } else if (potentialcommand =="scroll up"){
+
+  } else if (potentialcommand =="scroll up"){
+
+  }
+  else {
     alert("not a valid command");
   }
 /*
@@ -87,6 +99,7 @@ $(document).ready(function() {
 </p>
 
 <p>
+<input type="button" value="cat" id = "catbutton"><br>
 <a href="google.com">Google</a><br>
 <a href="cmu.edu">CMU</a><br>
 
