--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@ Expenses as material breeding insisted building to in. Continual so distrusts pr
   .control{
     font-size: 6em;
   }
-  #simulation {
+  simulation {
     position: fixed;
   }
 </style>
