--- a/index.html
+++ b/index.html
@@ -139,11 +139,15 @@ Expenses as material breeding insisted building to in. Continual so distrusts pr
     font-size: 2em;
   }
 
+  .command {
+    position: fixed;
+  }
+  .commandbutton {
+    position: fixed;
+  }
   .control{
     font-size: 6em;
   }
-  simulation {
-    position: fixed;
-  }
+  
 </style>
 </html>
