--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@ Expenses as material breeding insisted building to in. Continual so distrusts pr
   .command {
     position: fixed;
   }
-  .commandbutton {
+  .simulation {
     position: fixed;
   }
   .control{
