--- a/index.html
+++ b/index.html
@@ -98,7 +98,8 @@ $("#catbutton").click(function() {
 <body>
 <p>
 <input type="button" value="click to use voice command" id="control"><br>
-<span>simulation</span><input type="text" id="command" class="simulation"><input type="button" value="Do something!" id="commandbutton" class="simulation"><br>
+<span>simulation</span><input type="text" id="command" class="simulation"><br>
+<input type="button" value="Do something!" id="commandbutton" class="simulation"><br>
 
 <span>what's your favorite food?</span><input type="text" id="nugget"><br>
 
