--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@ $("#catbutton").click(function() {
 
  	console.log(potentialcommand);
   var commandarray = $.makeArray(potentialcommand);
+  console.log(commandarray);
   var foodornot = jQuery.inArray("food", commandarray);
   console.log(foodornot);
   
