--- a/index.html
+++ b/index.html
@@ -37,9 +37,8 @@ $("#catbutton").click(function() {
     $('html, body').animate({
         scrollTop: $(document).scrollTop()+150
     }, 1000);
-  } else if (potentialcommand =="click Google"){
-    $("html").load("www.google.com");
-    console.log("google");
+  } else if (potentialcommand =="click cat"){
+    alert("meow");
   } else if (foodornot !== -1){
     $("#nugget").val(potentialcommand);
   } else if (potentialcommand =="scroll up"){
@@ -114,7 +113,7 @@ $("#catbutton").click(function() {
 </p>
 
 <p>
-<input type="button" value="cat" id = "catbutton"><br>
+<input type="button" value="cat - click for meow" id = "catbutton"><br>
 <a href="google.com">Google</a><br>
 <a href="cmu.edu">CMU</a><br>
 
