--- a/index.html
+++ b/index.html
@@ -5,15 +5,15 @@
 <title>Example of Speech Recognition</title>
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
 <script>
+
+var recognition = new webkitSpeechRecognition();
+  
 $(document).ready(function() {
 
-//   if (!('webkitSpeechRecognition' in window)) {
-//   upgrade();
-// } else {
-//   console.log("good to go")
-//   }
 
-$("#catbutton").click(function() {
+$("#control").click(function() {
+  recognition.continuous = true;
+  recognition.interimResults = true;
   })
 
  $("#commandbutton").click(function() {
