--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@ $("#control").click(function() {
 <body>
 <p>
 <input type="button" value="click to use voice command" id="control"><br>
-<span>simulation</span><input type="text" id="command" class="simulation"><br>
+<span class="simulation">simulation</span><input type="text" id="command" class="simulation"><br>
 <input type="button" value="Do something!" id="commandbutton" class="simulation"><br>
 
 <span>what's your favorite food?</span><input type="text" id="nugget"><br>
@@ -141,7 +141,6 @@ Expenses as material breeding insisted building to in. Continual so distrusts pr
 </body>
 <style>
   span {
-    margin: 4em;
     left: 20em;
     top: 20em;
     font-size: 2em;
