--- a/index.html
+++ b/index.html
@@ -6,14 +6,47 @@
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
 <script>
 
-var recognition = new webkitSpeechRecognition();
+
   
 $(document).ready(function() {
 
 
 $("#control").click(function() {
-  recognition.continuous = true;
-  recognition.interimResults = true;
+ 
+  var finalTranscript = "";
+
+  var r = document.getElementById('result');
+
+      function startConverting () {
+        if('webkitSpeechRecognition' in window){
+          var speechRecognizer = new webkitSpeechRecognition();
+          speechRecognizer.continuous = true;
+          speechRecognizer.interimResults = true;
+          speechRecognizer.lang = 'en-US';
+          speechRecognizer.start();
+
+          var finalTranscripts = '';
+
+          speechRecognizer.onresult = function(event){
+            var interimTranscripts = '';
+            for(var i = event.resultIndex; i < event.results.length; i++){
+              var transcript = event.results[i][0].transcript;
+              transcript.replace("\n", "<br>");
+              if(event.results[i].isFinal){
+                finalTranscripts += transcript;
+              }else{
+                interimTranscripts += transcript;
+              }
+            }
+            r.innerHTML = finalTranscripts + '<span style="color:#999">' + interimTranscripts + '</span>';
+          };
+          speechRecognizer.onerror = function (event) {
+          };
+        }else{
+          r.innerHTML = 'Your browser is not supported. If google chrome, please upgrade!';
+        }
+      }
+
   })
 
  $("#commandbutton").click(function() {
@@ -103,7 +136,7 @@ $("#control").click(function() {
 </head>
 <body>
 <p>
-<input type="button" value="click to use voice command" id="control"><br>
+<input type="button" value="click to use voice command" id="control" onclick="startConverting();"><br>
 <span class="simulation">simulation</span><input type="text" id="command" class="simulation"><br>
 <input type="button" value="Do something!" id="commandbutton" class="simulation"><br>
 
