--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@ $("#control").click(function() {
   var finalTranscriptsArray = finalTranscripts.split("");
   var scrollornot = jQuery.inArray("scroll", finalTranscriptsArray)
   var foodornot = jQuery.inArray("food", finalTranscriptsArray);
-  //console.log(foodornot);
+  console.log(finalTranscriptsArray);
   
 
   if (scrollornot !== -1 && finalTranscriptsArray !== "up"){
