--- a/index.html
+++ b/index.html
@@ -51,12 +51,12 @@ $("#control").click(function() {
 
 
  //$("#commandbutton").click(function() {
- 	var potentialcommand = $("#command").val();
+ 	// var potentialcommand = $("#command").val();
 
- 	console.log(potentialcommand);
-  //var commandarray = $.makeArray(potentialcommand);
-  var commandarray = [];
-  commandarray = potentialcommand.split(" ");
+ 	// console.log(potentialcommand);
+  // var commandarray = $.makeArray(potentialcommand);
+  // var commandarray = [];
+  // commandarray = potentialcommand.split(" ");
   //console.log(commandarray);
   var finalTranscriptsArray = finalTranscripts.split("");
   var scrollornot = jQuery.inArray("scroll", finalTranscriptsArray)
