--- a/index.html
+++ b/index.html
@@ -74,14 +74,15 @@ $("#control").click(function() {
         scrollTop: $(document).scrollTop()+150
     }, 1000);
     console.log("scrolldown");
-  } else if (potentialcommand =="click cat"){
-    alert("meow");
-  } else if (foodornot !== -1){
-    $("#nugget").val(potentialcommand);
-    console.log("fud");
-  } else if (potentialcommand =="scroll up"){
+  } 
+  // else if (potentialcommand =="click cat"){
+  //   alert("meow");
+  // } else if (foodornot !== -1){
+  //   $("#nugget").val(potentialcommand);
+  //   console.log("fud");
+  // } else if (potentialcommand =="scroll up"){
 
-  }
+  // }
   else {
     alert("not a valid command");
   }
