--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@ $("#control").click(function() {
   var scrollornot = jQuery.inArray("scroll", finalTranscriptsArray)
   var foodornot = jQuery.inArray("food", finalTranscriptsArray);
   console.log(finalTranscripts);
+  console.log("running");
   
 
   if (scrollornot !== -1 && finalTranscriptsArray !== "up"){
