--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@ $("#control").click(function() {
               }
             }
             r.innerHTML = finalTranscripts + '<span style="color:#999">' + interimTranscripts + '</span>';
+            console.log(finalTranscripts);
           };
           speechRecognizer.onerror = function (event) {
           };
