--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@ $("#control").click(function() {
             var upornot = jQuery.inArray("up", finalTranscriptsArray);
             var downornot = jQuery.inArray("down", finalTranscriptsArray);
             
-            console.log(scrollornot);
+            console.log(upornot);
             console.log(finalTranscriptsArray);
 
             if (scrollornot !== -1 && upornot !== -1){
