--- a/index.html
+++ b/index.html
@@ -10,12 +10,14 @@
   
 $(document).ready(function() {
 
-var transcripts = '';
+
 var potentialcommand = '';
 
 $("#control").click(function() {
 
   var r = document.getElementById('result');
+  var s = document.getElementById('nugget');
+
   startConverting();
 
       function startConverting () {
@@ -32,18 +34,18 @@ $("#control").click(function() {
               var transcript = event.results[i][0].transcript;
               transcript.replace("\n", "<br>");
               if(event.results[i].isFinal){
-                transcripts += transcript;
+                finalTranscripts += transcript;
                 potentialcommand = transcript;
               }else{
                 interimTranscripts += transcript;
               }
             }
-            //r.innerHTML = transcripts + '<span style="color:#999">' + interimTranscripts + '</span>';
+            r.innerHTML = finalTranscripts + '<span style="color:#999">' + interimTranscripts + '</span>';
             
             console.log(potentialcommand);
 
 
-            var transcriptsArray = transcripts.split(" ");
+            var transcriptsArray = transcript.split(" ");
             var scrollornot = jQuery.inArray("scroll", transcriptsArray)
             var foodornot = jQuery.inArray("food", transcriptsArray);
             var upornot = jQuery.inArray("up", transcriptsArray);
@@ -65,7 +67,7 @@ $("#control").click(function() {
               console.log("scrolldown");
             } 
             else if (enterornot !== -1){
-               r.innerHTML = transcripts + '<span style="color:#999">' + interimTranscripts + '</span>';
+               s.innerHTML = transcript;
             } 
             //else if (foodornot !== -1){
             //   $("#nugget").val(potentialcommand);
@@ -158,7 +160,7 @@ $("#control").click(function() {
 <input type="button" value="click to use voice command" id="control" ><br>
 <div id = "result"></div>
 
-<span>what's your favorite food?</span><input type="text" id="nugget"><br>
+<span>what would you like to enter?</span><input type="text" id="nugget"><br>
 
 
 </p>
