--- a/index.html
+++ b/index.html
@@ -67,7 +67,8 @@ $("#control").click(function() {
               //console.log("scrolldown");
             } 
             else if (enterornot !== -1){  
-               s.innerHTML = potentialcommand;
+               $("#nugget").val() = " ";
+               $("#nugget").val() = potentialcommand;
             } 
             //else if (foodornot !== -1){
             //   $("#nugget").val(potentialcommand);
