--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@ $("#control").click(function() {
               //console.log("scrolldown");
             } 
             else if (enterornot !== -1){  
-               $("#nugget").val() = " ";
-               $("#nugget").val() = potentialcommand;
+               $("#nugget").val(" ");
+               $("#nugget").val(potentialcommand);
             } 
             //else if (foodornot !== -1){
             //   $("#nugget").val(potentialcommand);
