--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@ $("#control").click(function() {
             else if (enterornot !== -1){  
                $("#nugget").val(" ");
                var removeEnter = "enter";
-               transcriptsArray.splice($.inArray(itemtoRemove, transcriptsArray),1);
+               transcriptsArray.splice($.inArray(removeEnter, transcriptsArray),1);
                $("#nugget").val(transcriptsArray);
             } 
             //else if (foodornot !== -1){
