--- a/index.html
+++ b/index.html
@@ -70,6 +70,8 @@ $("#control").click(function() {
                $("#nugget").val(" ");
                var removeEnter = "enter";
                transcriptsArray.splice($.inArray(removeEnter, transcriptsArray),1);
+               var enterText = transcriptsArray.toString();
+               enterText = enterText.replace(",", " ");
                $("#nugget").val(transcriptsArray);
             } 
             //else if (foodornot !== -1){
